<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/r5"
    tools:context=".CatogeryView">

    <ImageView
        android:id="@+id/image_cage"
        android:layout_width="190dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="394dp"
        android:layout_toStartOf="@+id/image_chains"
        app:srcCompat="@drawable/c1" />

    <ImageView
        android:id="@+id/image_chains"
        android:layout_width="190dp"
        android:layout_height="185dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="394dp"
        app:srcCompat="@drawable/ch1" />

    <Button
        android:id="@+id/btncategory1"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="330dp"
        android:text="@string/btncage" />

    <Button
        android:id="@+id/btncategory2"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="224dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="332dp"
        android:text="@string/btnchains" />

    <ImageView
        android:id="@+id/image_combs"
        android:layout_width="190dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="411dp"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="146dp"
        app:srcCompat="@drawable/co1" />

    <ImageView
        android:id="@+id/image_toys"
        android:layout_width="190dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="222dp"
        android:layout_marginTop="411dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="146dp"
        app:srcCompat="@drawable/co1" />

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="586dp"
        android:text="@string/categoryName"
        android:textColor="@color/formName"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btncategory3"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="595dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="77dp"
        android:text="@string/btncombs" />

    <Button
        android:id="@+id/btncategory4"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="225dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="77dp"
        android:text="@string/btntoys" />

</RelativeLayout>